--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -5,8 +5,10 @@
 // Containers
 .fixed-header {
     position: relative;
-    z-index: 2;
+    z-index: 1;
     padding: 0;
+    visibility: visible;
+    // display: none;
     // border: 2px solid red;
 }
 
@@ -14,7 +16,7 @@
 .sticky-header {
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     
     width: inherit;
     height: fit-content;
@@ -34,7 +36,6 @@
         top: -100%;
     }
 }
-
 
 header {
     width: 100%;
